--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.3",
     "react-intersection-observer": "^9.6.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "5.0.1",
     "react-simply-carousel": "^9.1.1",
     "react-slideshow-image": "^4.3.0",
     "web-vitals": "^2.1.4"
@@ -43,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
