--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.3",
     "react-intersection-observer": "^9.6.0",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-simply-carousel": "^9.1.1",
     "react-slideshow-image": "^4.3.0",
