--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "react-simply-carousel": "^9.1.1",
     "react-slideshow-image": "^4.3.0",
+    "sal.js": "^0.8.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
