--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-intersection-observer": "^9.6.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-scroll-parallax": "^3.4.5",
     "react-simply-carousel": "^9.1.1",
     "react-slideshow-image": "^4.3.0",
     "react-visibility-sensor": "^5.1.1",
