--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react-customizable-progressbar": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.3",
+    "react-hash-link": "^1.0.2",
     "react-intersection-observer": "^9.6.0",
     "react-router-dom": "^6.22.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-scroll-parallax": "^3.4.5",
     "react-simply-carousel": "^9.1.1",
